<resources>
    <string name="app_name">May tinh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Máy Tính</string>
    <string name="nav_header_subtitle">Made by Hà Nhật Tuấn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_binh_phuong">x&#x00b2;</string>
    <string name="btn_am_duong">&#177;</string>
    <string name="btn_phai">&#x003e;&#x003e;</string>
    <string name="btn_trai">&#x003c;&#x003c;</string>
    <string name="btn_2nd">2&#x207f;&#x1d48;</string>
    <string name="btn_10mux">10&#x02e3;</string>
    <string name="btn_xmuy">x&#x02b8;</string>
    <string name="btn_pi">&#x03c0;</string>

    <string name="menu_standard">Standard</string>
    <string name="menu_scientific">Scientific</string>
    <string name="menu_programmer">Programmer</string>
    <string name="menu_length">Length</string>
    <string name="menu_currency">Currency</string>
    <string name="menu_weight">Weight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>