<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_standard">

    <fragment
        android:id="@+id/nav_standard"
        android:name="com.example.myapplication.ui.standard.StandardFragment"
        android:label="@string/menu_standard"
        tools:layout="@layout/fragment_standard" />

    <fragment
        android:id="@+id/nav_scientific"
        android:name="com.example.myapplication.ui.scientific.ScientificFragment"
        android:label="@string/menu_scientific"
        tools:layout="@layout/fragment_scientific" />

    <fragment
        android:id="@+id/nav_programmer"
        android:name="com.example.myapplication.ui.programmer.ProgrammerFragment"
        android:label="@string/menu_programmer"
        tools:layout="@layout/fragment_programmer" />

    <fragment
        android:id="@+id/nav_currency"
        android:name="com.example.myapplication.ui.currency.CurrencyFragment"
        android:label="@string/menu_currency"
        tools:layout="@layout/fragment_currency" />

    <fragment
        android:id="@+id/nav_length"
        android:name="com.example.myapplication.ui.length.LengthFragment"
        android:label="@string/menu_length"
        tools:layout="@layout/fragment_length" />
</navigation>